# learning

./: .env.example  .gitignore  README.md  TASKS.md  docker-compose.yml  list_models.py  pyproject.toml  pytest.ini  verify_setup.py
.github/workflows/: backend-tests.yml  deploy.yml  frontend-e2e.yml  security.yml
backend/: Dockerfile  arxiv_fetcher.py  auth.py  db.py  demo_papers.py  main.py  models.py  notebook_generator.py  pdf_extractor.py  prompt_template.py  pyproject.toml
docs/: branch-protection.md
frontend/: Dockerfile  middleware.ts  next.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  supervisord.conf  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: session.ts
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
sprints/v1/: EXEC_SUMMARY.md  PRD.md  SLIDES_SUMMARY.md  TASKS.md  WALKTHROUGH.md
sprints/v2/: PRD.md  TASKS.md  WALKTHROUGH.md
sprints/v3/: PRD.md  TASKS.md  WALKTHROUGH.md
tests/: __init__.py
tests/integration/: conftest.py  test_analytics.py  test_analyze_paper.py  test_arxiv_url_endpoint.py  test_auth_guard.py  test_auth_history.py  test_auth_login.py  test_auth_signup.py  test_create_colab_link.py  test_csrf.py  test_db_initialization.py  test_demo_papers.py  test_export_markdown.py  test_extract_text.py  test_generate_notebook.py  test_health_checks.py  test_history_api.py  test_persist_analysis.py  test_schema_migration.py  test_upload_pdf_endpoint.py  test_user_models.py
tests/quality/: REAL_QUALITY_REPORT.md  attention_output.ipynb  (+4 more)
(+23 files in other folders)
