[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-notebook-backend"
version = "0.1.0"
description = "FastAPI backend for Research Paper → Jupyter Notebook converter"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "python-multipart>=0.0.6",
    "openai>=1.3.0",
    "pydantic-settings>=2.1.0",
    "pypdf>=3.17.1",
    "pdfplumber>=0.10.3",
    "nbformat>=5.9.2",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "sqlmodel>=0.0.14",
    "passlib>=1.7.4",
    "bcrypt>=4.1.1",
    "python-jose>=3.3.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[tool.setuptools]
packages = ["backend"]
